Next release, whenever it is:

   New Features:
   * There is a new global configuration item, 'script-extensions', which
     configures Perl::Critic's idea of which file name extensions represent
     scripts. The desired extensions are specified as a space-separated list,
     with leading '.' on each if that is desired. Files whose names end in
     '.PL' will always be considered scripts.
    * Perlcritic has a new command option, --document-type, which overrides
      perlcritic's document type logic. This takes one of three values:
      - 'script' causes all documents to be considered scripts;
      - 'module' causes all documents to be considered modules;
      - 'auto' is an explicit request to use perlcritic's normal document type
        logic, and is the default.

[1.099_002] Released on 2009-06-27

    Performance Improvements:
    * We've been able to get a 30% improvement in the performance by
      adding caching to some methods in PPI.  Your actual performance
      gains may differ, depending on your configuration.  In general,
      you'll notice a bigger speedup if you use a lot of Policies and
      your source files are really large.  This code is highly experimental
      and may be abandoned in the next release.

[1.099_001] Released on 2009-06-25

    New Policies:
      Objects::ProhibitIndirectSyntax
      ValuesAndExpressions::ProhibitComplexVersion
      ValuesAndExpressions::RequireConstantVersion

    New Features:
    * Perlcritic will list the names of files with violations if given the
      --files-with-violations option, or the names of files without
      violations if given the --files-without-violations options. These
      have synonyms -l and -L respectively.
    * Perlcritic has a new --list-used option, which lists the Policies
      that will be enforced, given the current configuration.  This is
      useful if you've written a complex command-line or modified your