@@ -5,7 +5,9 @@ Next release, whenever it is:
      configures Perl::Critic's idea of which file name extensions represent
      scripts. The desired extensions are specified as a space-separated list,
      with leading '.' on each if that is desired. Files whose names end in
-     '.PL' will always be considered scripts.
+     '.PL' will always be considered scripts. This can be overridden by
+     command option --script-exctensions, which can be specified multiple
+     times.
     * Perlcritic has a new command option, --document-type, which overrides
       perlcritic's document type logic. This takes one of three values:
       - 'script' causes all documents to be considered scripts;
